# churn-pred

./: setup.cfg
src/churn_pred/: data_prep.py
