[metadata]
name = churn-pred
author = See AUTHORS
author-email = "" # TODO
summary = Engie datascience challenge for Churn prediction
description-file = README.md
home-page = https://github.com/AlexandreHuynen/churn-pred
classifier =
    License :: OSI Approved :: MIT license
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = churn-pred
